# Don't edit the `bin` list manually! It is updated by `rustlings dev update`
bin = [
  { name = "intro1", path = "exercises/00_intro/intro1.rs" },
  { name = "intro1_sol", path = "solutions/00_intro/intro1.rs" },
  { name = "intro2", path = "exercises/00_intro/intro2.rs" },
  { name = "intro2_sol", path = "solutions/00_intro/intro2.rs" },
  { name = "variables1", path = "exercises/01_variables/variables1.rs" },
  { name = "variables1_sol", path = "solutions/01_variables/variables1.rs" },
  { name = "variables2", path = "exercises/01_variables/variables2.rs" },
  { name = "variables2_sol", path = "solutions/01_variables/variables2.rs" },
  { name = "variables3", path = "exercises/01_variables/variables3.rs" },
  { name = "variables3_sol", path = "solutions/01_variables/variables3.rs" },
  { name = "variables4", path = "exercises/01_variables/variables4.rs" },
  { name = "variables4_sol", path = "solutions/01_variables/variables4.rs" },
  { name = "variables5", path = "exercises/01_variables/variables5.rs" },
  { name = "variables5_sol", path = "solutions/01_variables/variables5.rs" },
  { name = "variables6", path = "exercises/01_variables/variables6.rs" },
  { name = "variables6_sol", path = "solutions/01_variables/variables6.rs" },
  { name = "functions1", path = "exercises/02_functions/functions1.rs" },
  { name = "functions1_sol", path = "solutions/02_functions/functions1.rs" },
  { name = "functions2", path = "exercises/02_functions/functions2.rs" },
  { name = "functions2_sol", path = "solutions/02_functions/functions2.rs" },
  { name = "functions3", path = "exercises/02_functions/functions3.rs" },
  { name = "functions3_sol", path = "solutions/02_functions/functions3.rs" },
  { name = "functions4", path = "exercises/02_functions/functions4.rs" },
  { name = "functions4_sol", path = "solutions/02_functions/functions4.rs" },
  { name = "functions5", path = "exercises/02_functions/functions5.rs" },
  { name = "functions5_sol", path = "solutions/02_functions/functions5.rs" },
  { name = "if1", path = "exercises/03_if/if1.rs" },
  { name = "if1_sol", path = "solutions/03_if/if1.rs" },
  { name = "if2", path = "exercises/03_if/if2.rs" },
  { name = "if2_sol", path = "solutions/03_if/if2.rs" },
  { name = "if3", path = "exercises/03_if/if3.rs" },
  { name = "if3_sol", path = "solutions/03_if/if3.rs" },
  { name = "quiz1", path = "exercises/quizzes/quiz1.rs" },
  { name = "quiz1_sol", path = "solutions/quizzes/quiz1.rs" },
  { name = "quiz2", path = "exercises/quizzes/quiz2.rs" },
  { name = "quiz2_sol", path = "solutions/quizzes/quiz2.rs" },
  { name = "quiz3", path = "exercises/quizzes/quiz3.rs" },
  { name = "quiz3_sol", path = "solutions/quizzes/quiz3.rs" },
  { name = "primitive_types1", path = "exercises/04_primitive_types/primitive_types1.rs" },
  { name = "primitive_types1_sol", path = "solutions/04_primitive_types/primitive_types1.rs" },
  { name = "primitive_types2", path = "exercises/04_primitive_types/primitive_types2.rs" },
  { name = "primitive_types2_sol", path = "solutions/04_primitive_types/primitive_types2.rs" },
  { name = "primitive_types3", path = "exercises/04_primitive_types/primitive_types3.rs" },
  { name = "primitive_types3_sol", path = "solutions/04_primitive_types/primitive_types3.rs" },
  { name = "primitive_types4", path = "exercises/04_primitive_types/primitive_types4.rs" },
  { name = "primitive_types4_sol", path = "solutions/04_primitive_types/primitive_types4.rs" },
  { name = "primitive_types5", path = "exercises/04_primitive_types/primitive_types5.rs" },
  { name = "primitive_types5_sol", path = "solutions/04_primitive_types/primitive_types5.rs" },
  { name = "primitive_types6", path = "exercises/04_primitive_types/primitive_types6.rs" },
  { name = "primitive_types6_sol", path = "solutions/04_primitive_types/primitive_types6.rs" },
  { name = "vecs1", path = "exercises/05_vecs/vecs1.rs" },
  { name = "vecs1_sol", path = "solutions/05_vecs/vecs1.rs" },
  { name = "vecs2", path = "exercises/05_vecs/vecs2.rs" },
  { name = "vecs2_sol", path = "solutions/05_vecs/vecs2.rs" },
  { name = "move_semantics1", path = "exercises/06_move_semantics/move_semantics1.rs" },
  { name = "move_semantics1_sol", path = "solutions/06_move_semantics/move_semantics1.rs" },
  { name = "move_semantics2", path = "exercises/06_move_semantics/move_semantics2.rs" },
  { name = "move_semantics2_sol", path = "solutions/06_move_semantics/move_semantics2.rs" },
  { name = "move_semantics3", path = "exercises/06_move_semantics/move_semantics3.rs" },
  { name = "move_semantics3_sol", path = "solutions/06_move_semantics/move_semantics3.rs" },
  { name = "move_semantics4", path = "exercises/06_move_semantics/move_semantics4.rs" },
  { name = "move_semantics4_sol", path = "solutions/06_move_semantics/move_semantics4.rs" },
  { name = "move_semantics5", path = "exercises/06_move_semantics/move_semantics5.rs" },
  { name = "move_semantics5_sol", path = "solutions/06_move_semantics/move_semantics5.rs" },
  { name = "structs1", path = "exercises/07_structs/structs1.rs" },
  { name = "structs1_sol", path = "solutions/07_structs/structs1.rs" },
  { name = "structs2", path = "exercises/07_structs/structs2.rs" },
  { name = "structs2_sol", path = "solutions/07_structs/structs2.rs" },
  { name = "structs3", path = "exercises/07_structs/structs3.rs" },
  { name = "structs3_sol", path = "solutions/07_structs/structs3.rs" },
]

[package]
name = "exercises"
edition = "2021"
# Don't publish the exercises on crates.io!
publish = false

[dependencies]
